[tool.poetry]
name = "workflow"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
python-telegram-bot = "^20.1"
python-dotenv = "^0.21.1"
pytz = "^2022.7.1"
pydantic = "^1.10.5"
black = "^23.1.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
